# air_corridor

./: ObstacleGrid.py  add_vertical_waypoints.py  astar_grid.npy  check_path_collisions.py  convert_to_geo.py  coordinate_transformer.py  corrected_path_transformation.json  filtered_corrected_path_transformation.json  filtered_vertiport_transformation.json  fliter_path.py  graph_search.py  kml_check.py  kml_parser.py  main.py  neu_lon.py  obstacles.csv  output_grid.npy  path.json  path_transformation.json  path_with_intersection.json  path_without_intersection.json  paths.csv  requirements.txt  routes_custom_transformer.kml  routes_geo_custom.json  routes_with_intersection.kml  routes_withintersection.kml  routes_without_intersection.kml  test_coordinate_transform.py  transformation.py  utils.py  vertiport2.json  vertiport_1.json  vertiport_transformation_fixed.json  vertiports.csv
graphsearch/src/: CMakeLists.txt  Coord.h  cell.h  drone.h  multiagent.cpp  multiagent.h  route.h  tempCodeRunnerFile.h
graphsearch/src/ConOps1/: astar_conops1.cpp  astar_conops1.h  conops1.cpp  conops1.h  thetastar1.cpp  thetastar1.h  utils_conops1.cpp  utils_conops1.h
graphsearch/src/ConOps2/: astar_conops2.cpp  astar_conops2.h  conops2.cpp  conops2.h  thetastar2.cpp  thetastar2.h  utils_conops2.cpp  utils_conops2.h
graphsearch/src/ConOps3/: astar_conops3.cpp  astar_conops3.h  conops3.cpp  conops3.h  utils_conops3.cpp  utils_conops3.h
graphsearch/src/log/: 20v.INFO  info20240508-102809.1119337  info20240508-103853.1120324  info20240508-103921.1120436  info20240508-103938.1120564  (+8 more)
(+981 files in other folders)
